--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,17 @@
     font-family: "Poppins"  , sans-serif;
     text-decoration: none;
     list-style: none;
-  overflow-x: none;
+    overflow-x: none;
 }
 .container{
-    max-width: 1440px;
+    max-width: 1920px;
     margin: 0 auto;
     padding: 0 5%;
     overflow-x: none;
 
 }
 body{
-    max-width: 1440px;
+    margin:  0 auto;
     padding: 0 5%;
     background: linear-gradient(108.13deg, #320000 1%, #0F0323 37.66%, #322204 72.27%, #000230 98.74%);
   
